feat: change to never trailingSlash

--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -17,7 +17,7 @@ const coverImagePath = `/src/assets/blogimages/${post.data.pubId}/cover.jpg`
 
 <a
 	transition:name={`blog-card-${post.data.pubId}`}
-	href={`/${locale}/posts/${id}/`}
+	href={`/${locale}/posts/${id}`}
 	class="group hover:bg-secondary dark:hover:bg-secondary-dark flex h-full flex-col gap-4 rounded-3xl p-3 pb-8 transition-colors"
 >
 	{
