--- a/src/pages/[lang]/404.astro
+++ b/src/pages/[lang]/404.astro
@@ -30,7 +30,7 @@ export const getStaticPaths = () =>
 					})
 				}
 			</p>
-			<a class="btn-primary" href={`/${locale}/`}>
+			<a class="btn-primary" href={`/${locale}`}>
 				{
 					t({
 						es: 'Ir a la página principal',
