--- a/src/pages/[lang]/locale.astro
+++ b/src/pages/[lang]/locale.astro
@@ -38,7 +38,7 @@ export const getStaticPaths = () =>
 					<div>
 						<a
 							class="item-center decoration-primary dark:decoration-primary-dark text-4xl decoration-wavy underline-offset-4 hover:underline"
-							href={`/${lang}/`}
+							href={`/${lang}`}
 						>
 							{config.emogi} {config.label}
 						</a>
