chore(deps): update all packages

--- a/src/components/LocaleSelector.astro
+++ b/src/components/LocaleSelector.astro
@@ -20,7 +20,7 @@ const isActive = Astro.url.pathname.startsWith(`/${locale}/locale`)
 	</a>
 </div>
 <style>
-	@reference "@/styles/global.css";
+	@reference "../styles/global.css";
 
 	a {
 		@apply hover:text-accent dark:hover:text-accent-dark;
