--- a/src/components/NavbarLink.astro
+++ b/src/components/NavbarLink.astro
@@ -18,7 +18,7 @@ const isActive =
 	<slot />
 </a>
 <style>
-	@reference "@/styles/global.css";
+	@reference "../styles/global.css";
 
 	a {
 		@apply decoration-accent dark:decoration-accent-dark relative decoration-wavy decoration-2 underline-offset-4 hover:underline;
