--- a/src/components/ThemeSelector.astro
+++ b/src/components/ThemeSelector.astro
@@ -51,7 +51,7 @@ const { class: className } = Astro.props
 </div>
 
 <style>
-	@reference "@/styles/global.css";
+	@reference "../styles/global.css";
 
 	button.theme-button {
 		@apply rounded-full p-1 duration-0;
