--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -22,7 +22,7 @@ const coverImagePath = `/src/assets/blogimages/${post.data.pubId}/cover.jpg`
 >
 	{
 		blogImages[coverImagePath] && (
-			<div class="relative overflow-hidden rounded-xl">
+			<div class="timeline-view animate-blurred-fade-in animate-range-[entry_10%_contain_30%] relative overflow-hidden rounded-xl">
 				<Picture
 					src={blogImages[coverImagePath]()}
 					alt={post.data.title}
